--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,6 +20,15 @@ repos:
     hooks:
       - id: black
         exclude: docs/.*|tests/.*.fixture|.*.ge_store_backend_id
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.1.0
+    hooks:
+      - id: codespell
+        args: 
+          - --ignore-words-list
+          - ba,cros,fo,hist,nd,nin,onl,te,tring,wont
+          - --skip
+          - *.csv,*.lock
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.8.3
     hooks:
