--- a/requirements-dev-sqlalchemy.txt
+++ b/requirements-dev-sqlalchemy.txt
@@ -10,7 +10,7 @@ PyMySQL>=0.9.3,<0.10  # sqlalchemy_tests
 pyodbc>=4.0.30  # sqlalchemy_tests
 
 # NOTE - 20200825
-# snowflake-connector-python is implied by snowflake-sqlalchemy, but has produced multile
+# snowflake-connector-python is implied by snowflake-sqlalchemy, but has produced multiple
 # versions with cascading breaking changes, so we are going to pin the version.
 # Review this decision with them to identify alternate paths forward without pinning (even for tests) in the future
 # END NOTE
